Added responsve layout for disaster3

--- a/app/src/main/res/layout-large/activity_disaster3.xml
+++ b/app/src/main/res/layout-large/activity_disaster3.xml
@@ -16,7 +16,7 @@
         android:text="@string/tv_discat"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        android:textSize="17sp"
+        android:textSize="24.7sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,53 +26,52 @@
 
     <Button
         android:id="@+id/earthquake"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="397dp"
+        android:layout_height="86dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_earthquake"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/flood"
         app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/landslide"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.299"
-        />
+        app:layout_constraintVertical_bias="0.299" />
 
     <Button
         android:id="@+id/flood"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="396dp"
+        android:layout_height="73dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_flood"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/landslide"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="@+id/landslide"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.591" />
 
     <Button
         android:id="@+id/landslide"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="404dp"
+        android:layout_height="87dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_landslide"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.413"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="0.87" />
 </androidx.constraintlayout.widget.ConstraintLayout>
