--- a/app/src/main/res/layout-small/activity_disaster3.xml
+++ b/app/src/main/res/layout-small/activity_disaster3.xml
@@ -10,13 +10,13 @@
     <TextView
         android:id="@+id/textView38"
         android:layout_width="match_parent"
-        android:layout_height="61dp"
+        android:layout_height="31dp"
         android:background="@color/design_default_color_primary"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_discat"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        android:textSize="17sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,53 +26,52 @@
 
     <Button
         android:id="@+id/earthquake"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="144dp"
+        android:layout_height="34dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_earthquake"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/landslide"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/landslide"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.299"
-        />
+        app:layout_constraintVertical_bias="0.398" />
 
     <Button
         android:id="@+id/flood"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="144dp"
+        android:layout_height="34dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_flood"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/landslide"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="@+id/landslide"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.718" />
 
     <Button
         android:id="@+id/landslide"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
+        android:layout_width="144dp"
+        android:layout_height="34dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#CD5C5C"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_landslide"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
